@@ -1,5 +1,6 @@
 from DateTime import DateTime
 from ftw.testing import freeze
+from plone.app.testing import PLONE_FUNCTIONAL_TESTING
 from plone.mocktestcase.dummy import Dummy
 from unittest2 import TestCase
 import datetime
@@ -150,3 +151,20 @@ class TestFreeze(TestCase):
                                 dummy.datetime_class.__name__)),
              'instance': '.'.join((type(dummy.date).__module__,
                                    type(dummy.date).__name__))})
+
+
+class TestFreezeIntegration(TestCase):
+    layer = PLONE_FUNCTIONAL_TESTING
+
+    def test_commit_works_with_transactions(self):
+        with freeze(datetime.datetime(2015, 7, 22, 11, 45, 58)):
+            self.layer['portal'].current_date = datetime.datetime.now()
+            transaction.commit()
+
+        transaction.begin()
+
+        thedate = self.layer['portal'].current_date
+        self.assertEquals(datetime.datetime(2015, 7, 22, 11, 45, 58), thedate)
+        self.assertEquals('datetime.datetime',
+                          '.'.join((type(thedate).__module__,
+                                    type(thedate).__name__)))
