@@ -5,6 +5,9 @@ Changelog
 1.10.3 (unreleased)
 -------------------
 
+- Freezer: disable freezing while committing to database for preventing pickling errors.
+  [jone]
+
 - Freezer bugfix: replace datetime instances when leaving freeze context manager.
   [jone]
 
